updated connect css to initialize height/visibility correctly on load

--- a/src/assets/css/connect.scss
+++ b/src/assets/css/connect.scss
@@ -5,7 +5,9 @@
     // transition: 0.5s height;
 
     #connect--outer {
-        height: 100%;
+        // height: 100%;
+        height: 0%;
+        visibility: hidden;
         transition: 0.5s height, 0.5s visibility;
     }
 
